<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scrimmage</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="default_text">New Text</string>

    <!-- Home Activity -->
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="your_game_title">Your Games</string>
    <string name="nearby_games_title">Nearby Games</string>

    <!-- Login and Sign Up activities -->
    <string name="login_activity_login_button">Log In</string>
    <string name="sign_up_activity_login_button">Sign Up</string>
    <string name="login_activity_sign_up_label">or Sign Up!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_error_message">Please make sure you fill in all of the required fields!</string>
    <string name="sign_up_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password</string>
    <string name="login_error_title">Oops!</string>
    <string name="favorite_sport_hint">Favorite Sport</string>
    <string name="phone_hint">Phone Number</string>

    <!-- Game Activity -->
    <string name="action_menu_create_scrimmage_label">Create Scrimmage</string>
    <string name="title_activity_game">Scrimmages</string>
    <string name="going_image_content_description">Going</string>
    <string name="miles">Miles:</string>

    <string-array name="mile_selections">
        <item>10</item>
        <item>25</item>
        <item>50</item>
    </string-array>

    <!-- Create Game Activity -->
    <string name="title_activity_create_game">Create a Scrimmage</string>
    <string name="location_label">Location</string>
    <string name="title_label">Title</string>
    <string name="description_label">Description</string>
    <string name="time_label">Time</string>
    <string name="date_label">Date</string>
    <string name="submit_button_label">Create Scrimmage</string>
    <string name="success_message">Scrimmage created!</string>
    <string name="location_image_content_description">Location Image</string>

    <!-- View Game Activity -->
    <string name="going_label">Going:</string>
    <string name="im_going_button">I\'m Going!</string>
    <string name="im_going_success">Have fun!</string>

    <!-- Account Activity -->
    <string name="name_label">Name</string>
    <string name="username_label">Username</string>
    <string name="favorite_sport_label">Favorite Sport: </string>
    <string name="bio_label">Bio: </string>
    <string name="location_account_label">Location: </string>
    <string name="contact_label">Contact Info: </string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="bio_empty">No bio!</string>
    <string name="location_empty">No location!</string>
    <string name="action_edit_profile">Edit Profile</string>

    <!-- Edit Profile Activity -->
    <string name="bio_hint">Bio</string>
    <string name="location_hint">Location</string>
    <string name="current_location">Current Location</string>
    <string name="save">Save</string>
    <string name="account_success">Profile updated!</string>

    <!-- Maps Activity -->
    <string name="action_search">Search</string>
    <string name="search_title">Near You</string>

    <string-array name="search_items">
        <item>Parks</item>
        <item>Gyms</item>
    </string-array>

    <string name="cancel">Cancel</string>
    <string name="action_save_location">Save Location</string>

    <!-- Navigation Drawer -->
    <string-array name="nav_drawer_labels">
        <item>Home</item>
        <item>Scrimmages</item>
        <item>My Account</item>
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_menu_home</item>
        <item>@drawable/ic_action_football</item>
        <item>@drawable/perm_group_accounts</item>
    </array>
    <string name="home_nav">Home</string>
    <string name="game_nav">Scrimmages</string>
    <string name="account_nav">My Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Errors -->
    <string name="generic_error_title">Oops!</string>
    <string name="generic_error_message">An error occurred</string>
    <string name="create_game_error_message">There was an error in creating your scrimmage :( Please try again.</string>
    <string name="title_activity_maps">Location</string>
    <string name="title_activity_view_game">View Scrimmage</string>
    <string name="title_activity_my_account">Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_friends">FriendsActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
