<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sousheelvunnam.scrimmage.ui.EditProfileActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:inputType="textMultiLine"
        android:id="@+id/bioEditText"
        android:hint="@string/bio_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationEditText"
        android:layout_below="@id/bioEditText"
        android:hint="@string/location_hint"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currentLocationButton"
        android:layout_below="@id/locationEditText"
        android:text="@string/current_location"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/favoriteSportEditProfileText"
        android:layout_below="@id/currentLocationButton"
        android:hint="@string/favorite_sport_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneEditProfileText"
        android:layout_below="@id/favoriteSportEditProfileText"
        android:hint="@string/phone_hint"
        android:inputType="phone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneEditProfileText"
        android:id="@+id/saveProfileButton"
        android:text="@string/save"/>

</RelativeLayout>
