<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MyActivity">

            <TextView
                android:id="@+id/yourGameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_game_title" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/yourGameList"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/yourGameTitle" />

            <TextView
                android:id="@+id/nearbyGamesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/yourGameList"
                android:text="@string/nearby_games_title" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/nearbyGameList"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/nearbyGamesTitle"/>

            <Button
                android:id="@+id/homeCreateScrimmageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nearbyGameList"
                android:text="@string/title_activity_create_game" />
        </RelativeLayout>
    </ScrollView>

    <!--<ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />-->

    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="com.sousheelvunnam.scrimmage.ui.fragments.NavDrawerFragment"
        tools:layout="@layout/fragment_nav_drawer" />

</android.support.v4.widget.DrawerLayout>